# dumbdb

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
dumbdb/: __init__.py  append_only_database.py  append_only_dbms.py  append_only_dbms_with_hash_indexes.py  database.py  db_engine.py  dbms.py  hash_index.py  models.py
dumbdb/dbms/: __init__.py  append_only_dbms.py  append_only_dbms_with_hash_indexes.py  conditions.py  dbms.py  hash_index.py
dumbdb/parser/: ast.py  grammar.py  parser.py  tokenizer.py
tests/: test_append_only_database.py  test_append_only_database_with_hash_indexes.py  test_hash_index.py
tests/benchmarks/: common.py  test_append_only_performance.py  test_append_only_with_hash_indexes_performance.py
tests/db_engine/: test_db_engine.py
tests/parser/: test_grammar.py  test_parser.py  test_tokenizer.py  test_where_conditions.py
